# sendcloud

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: workflows
.github/workflows/: pullrequestchecks.yml
migrations/: env.py
migrations/versions/: 0a1f01ac20d6_init_database.py  4ade61addf0b_init_database.py  672291ebcf13_init_database.py  e5b313ec6123_init_database.py
sendcloud/apps/: api_service.py  main.py  refresh_feeds.py  scheduler.py  scheduler_service.py
sendcloud/models/: __init__.py  feeds.py  feeds_model.py  users.py  users_model.py
sendcloud/routers/: __init__.py  canary.py  feeds_router.py  users_router.py
sendcloud/schemas/: __init__.py  feeds_schema.py  users_schema.py
sendcloud/services/: feeds_services.py  users_services.py
sendcloud/utils/: __init__.py  db_manager.py  exceptions.py  feed_loader.py  scheduler.py  settings.py  setup_tests.py
tests/models/: test_feeds.py  test_feeds_model.py  test_users_model.py
tests/routers/: test_canary.py  test_canary_router.py  test_users_router.py
tests/services/: test_feeds_router.py  test_users_router.py
tests/utils/: test_db_manager.py  test_exceptions.py  test_scheduler.py
