[tool.poetry]
name = "sendcloud"
version = "0.1.0"
description = "send cloud interview project"
authors = ["Alireza Khosravian <alireza.infotech@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pylint = "^2.17.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
flakeheaven = "^3.3.0"
black = "^23.3.0"
uvicorn = "^0.22.0"

[tool.mypy]
files = ["tests", "sendcloud"]
ignore_missing_imports = "True"

[tool.pylint.master]
recursive = true
ignore-paths = [ ".*venv.*", ".*.venv.*" ]

[tool.pylint.'MESSAGE']
max-line-length = "120"

[tool.pylint.'SIMILARITIES']
ignore-imports = "yes"
min-similarity-lines = 5

[tool.flakeheaven]
exclude = ["venv", ".venv"]
include = ["tests", "sendcloud"]

[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E501", "-E203", "-W503"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --disable-warnings --show-capture=no -v"
testpaths = [ "." ]
ignore-glob = [ "flycheck_*" ]

[tool.coverage.run]
omit = [
     "*/venv/*",
     "*/nix/*"
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
