[tool.poetry]
name = "sendcloud"
version = "0.1.0"
description = "send cloud interview project"
authors = ["Alireza Khosravian <alireza.infotech@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
startscheduler = "sendcloud.apps.pull_service:run"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
httpx = "^0.24.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
psycopg = {extras = ["binary"], version = "^3.1.9"}
asyncpg = "^0.27.0"
alembic = "^1.11.1"
aiosqlite = "^0.19.0"
feedparser = "^6.0.10"
aiohttp = "^3.8.4"
pydash = "^7.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pylint = "^2.17.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
flakeheaven = "^3.3.0"
black = "^23.3.0"
uvicorn = "^0.22.0"
aiosqlite = "^0.19.0"
freezegun = "^1.2.2"
sqlalchemy = {version = "2.0.15", extras = ["mypy"]}
psycopg2 = "^2.9.6"

[tool.mypy]
files = ["tests", "sendcloud"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true

[tool.pylint.master]
recursive = true
ignore-paths = ["migrations"]

[tool.pylint.'MESSAGE']
max-line-length = "120"

[tool.pylint.'SIMILARITIES']
ignore-imports = "yes"
min-similarity-lines = 5

[tool.flakeheaven]
exclude = ["venv", ".venv"]
include = ["tests", "sendcloud"]

[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E501", "-E203", "-W503"]

[tool.pytest.ini_options]
addopts = "--cov=sendcloud --cov-report=term-missing --disable-warnings --show-capture=no -v -s"
testpaths = [ "." ]
ignore-glob = [ "flycheck_*" ]

[tool.coverage.run]
omit = [
     "*/venv/*",
     "*/nix/*"
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
